# ChangeLog for dev-php/pecl-yaz
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-yaz/ChangeLog,v 1.12 2015/02/24 08:46:45 ago Exp $

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> pecl-yaz-1.1.6.ebuild:
  Stable for alpha, wrt bug #534568

  08 Jan 2015; Markus Meier <maekke@gentoo.org> pecl-yaz-1.1.6.ebuild:
  arm stable, bug #534568

  05 Jan 2015; Jeroen Roovers <jer@gentoo.org> pecl-yaz-1.1.6.ebuild:
  Stable for HPPA (bug #534568).

  04 Jan 2015; Agostino Sarubbo <ago@gentoo.org> pecl-yaz-1.1.6.ebuild:
  Stable for x86, wrt bug #534568

  04 Jan 2015; Agostino Sarubbo <ago@gentoo.org> pecl-yaz-1.1.6.ebuild:
  Stable for amd64, wrt bug #534568

*pecl-yaz-1.1.6 (29 Sep 2014)

  29 Sep 2014; Brian Evans <grknight@gentoo.org> +pecl-yaz-1.1.6.ebuild:
  Version bump; Add new php version support

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> pecl-yaz-1.1.1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  26 Jan 2014; Ole Markus With <olemarkus@gentoo.org> pecl-yaz-1.1.1.ebuild:
  Removing stable keyword for sh/s390

  05 Mar 2013; Ole Markus With <olemarkus@gentoo.org>
  -pecl-yaz-1.0.14-r1.ebuild, pecl-yaz-1.1.1.ebuild:
  Removed older ebuilds. EAPI bump

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> pecl-yaz-1.1.1.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #393965

  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> pecl-yaz-1.1.1.ebuild:
  Stable for AMD64, wrt bug #393965

  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> pecl-yaz-1.1.1.ebuild:
  x86 stable wrt bug #393965

  13 Dec 2011; Jeroen Roovers <jer@gentoo.org> pecl-yaz-1.1.1.ebuild:
  Stable for HPPA (bug #393965).

*pecl-yaz-1.1.1 (31 May 2011)

  31 May 2011; Ole Markus With <olemarkus@gentoo.org> +pecl-yaz-1.1.1.ebuild:
  Version bump

  16 Apr 2011; <olemarkus@gentoo.org> -pecl-yaz-1.0.14.ebuild,
  +pecl-yaz-1.0.14-r1.ebuild:
  Removed the wrong version. Fixup.
