@@ -1,0 +1,26 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-yaz/pecl-yaz-1.1.9.ebuild,v 1.1 2015/02/25 02:10:23 grknight Exp $
+
+EAPI=5
+
+PHP_EXT_NAME="yaz"
+PHP_EXT_INI="yes"
+PHP_EXT_ZENDEXT="no"
+DOCS="README"
+
+USE_PHP="php5-6 php5-5 php5-4"
+
+inherit php-ext-pecl-r2
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+
+DESCRIPTION="This extension implements a Z39.50 client for PHP using the YAZ toolkit"
+LICENSE="BSD"
+SLOT="0"
+IUSE=""
+
+DEPEND=">=dev-libs/yaz-3.0.2:0="
+RDEPEND="${DEPEND}"
+
+my_conf="--with-yaz=/usr"
