@@ -1,6 +1,11 @@
 # ChangeLog for dev-php/pecl-yaz
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-yaz/ChangeLog,v 1.12 2015/02/24 08:46:45 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-yaz/ChangeLog,v 1.13 2015/02/25 02:10:23 grknight Exp $
+
+*pecl-yaz-1.1.9 (25 Feb 2015)
+
+  25 Feb 2015; Brian Evans <grknight@gentoo.org> +pecl-yaz-1.1.9.ebuild:
+  Version bump; Update LICENSE to BSD per upstream
 
   24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> pecl-yaz-1.1.6.ebuild:
   Stable for alpha, wrt bug #534568
